# PathfindGA

./: .gitignore  CMakeLists.txt  README.md
src/: board.cpp  board.hpp  display.cpp  display.hpp  main.cpp  neuralnet.cpp  neuralnet.hpp  training.cpp  training.hpp
